Bug 1880718 - Make sure that constructable stylesheets has the right url data after construction. r=dshin

ReplaceSync did this, but if you don't call Replace() / ReplaceSync()
after construction we end up with the Servo_StyleSheet_Empty which has a
dummy URL data.

Differential Revision: https://phabricator.services.mozilla.com/D204603